<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.VERIFY.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainScreenFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_top_card">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/logo_verify"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/logo_verify_text_short"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/indonesian_fact_verification_system"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:autoPlay="true"
            app:autoPlayDelay="8000"
            app:autoWidthFixing="false"
            app:carouselBackground="#00FFFFFF"
            app:carouselType="BLOCK"
            app:imageScaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:showBottomShadow="false"
            app:showCaption="false"
            app:showIndicator="true"
            app:showNavigationButtons="false"
            app:showTopShadow="false" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="visible"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carouselView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_top_down">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/icon_turnbackhoax"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitXY"
                    android:src="@drawable/turnbackhoax"
                    app:layout_constraintEnd_toStartOf="@+id/icon_checkhoax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/icon_checkhoax"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_fact_check"
                    app:layout_constraintEnd_toStartOf="@+id/icon_jalahoax"
                    app:layout_constraintStart_toEndOf="@+id/icon_turnbackhoax"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/icon_jalahoax"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_jalahoax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_checkhoax"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_turnbackhoax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/turnbackhoax_desc"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/icon_turnbackhoax"
                    app:layout_constraintStart_toStartOf="@+id/icon_turnbackhoax"
                    app:layout_constraintTop_toBottomOf="@+id/icon_turnbackhoax" />

                <TextView
                    android:id="@+id/text_checkhoax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/cekfakta_desc"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/icon_checkhoax"
                    app:layout_constraintStart_toStartOf="@+id/icon_checkhoax"
                    app:layout_constraintTop_toBottomOf="@+id/icon_checkhoax" />

                <TextView
                    android:id="@+id/text_jalahoax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/jalahoax_desc"
                    app:layout_constraintEnd_toEndOf="@+id/icon_jalahoax"
                    app:layout_constraintStart_toStartOf="@+id/icon_jalahoax"
                    app:layout_constraintTop_toBottomOf="@+id/icon_jalahoax" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/icon_jakarta_post"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="67dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_jakarta_post"
                    app:layout_constraintEnd_toStartOf="@+id/icon_jaki"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_turnbackhoax" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/icon_jaki"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="96dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_jaki"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_checkhoax" />

                <TextView
                    android:id="@+id/text_jakarta_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/the_jakarta_post_desc"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/icon_jakarta_post"
                    app:layout_constraintStart_toStartOf="@+id/icon_jakarta_post"
                    app:layout_constraintTop_toBottomOf="@+id/icon_jakarta_post" />

                <TextView
                    android:id="@+id/text_jaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/jaki_desc"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/icon_jaki"
                    app:layout_constraintStart_toStartOf="@+id/icon_jaki"
                    app:layout_constraintTop_toBottomOf="@+id/icon_jaki" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_chat"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_reverse">

                <ImageView
                    android:id="@+id/icon_fact_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/icon_fact_check"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/text_cta_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/cta_banner"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_fact_check"
                    app:layout_constraintStart_toEndOf="@+id/icon_fact_check"
                    app:layout_constraintTop_toTopOf="@+id/icon_fact_check" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>